# adaptive_hockey_federation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  data.xlsx  docker-compose.yaml  entrypoint.sh  et --hard 4d7170e  log.txt  parser_1.py  poetry  pyproject.toml  pytest.ini  qqq  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs-template.md  feature_request.md  new-feature.md
.github/workflows/:  codestyle_pep8.yaml  build-and-push-github-packages.yaml  mypy_flake.yml  prod_deploy.yaml  production_deploy.yaml  pytest.yaml  stage_deploy.yaml
adaptive_hockey_federation/: docx_parser.py  manage.py  pytest.ini  user_card.py
adaptive_hockey_federation/adaptive_hockey_federation/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
adaptive_hockey_federation/analytics/: apps.py  forms.py  mixins.py  permissions.py  schema.py  urls.py  views.py
adaptive_hockey_federation/competitions/: admin.py  apps.py  forms.py  models.py  schema.py  urls.py  utils.py  validators.py  views.py
adaptive_hockey_federation/competitions/migrations/: 0001_initial.py  0002_add_relations.py  0002_alter_event_options.py  0002_initial.py  0003_competition_disciplines.py  0003_remove_competition_is_active.py  0004_competition_disciplines.py
adaptive_hockey_federation/core/: __init__.py  apps.py  asgi.py  celery.py  constants.py  context_processors.py  logging.py  permissions.py  urls.py  user_card.py  utils.py  validators.py  views.py  wsgi.py
adaptive_hockey_federation/core/config/: base_settings.py  dev_settings.py  prod_settings.py  test_settings.py
adaptive_hockey_federation/core/fixtures/: data.json  fill_random_diagnosis.py
adaptive_hockey_federation/core/settings/: openpyxl_settings.py
adaptive_hockey_federation/core/templatetags/: user_filters.py
adaptive_hockey_federation/core/ydisk_utils/: utils.py
adaptive_hockey_federation/events/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  validators.py  views.py
adaptive_hockey_federation/events/migrations/: 0001_initial.py  0002_alter_event_options.py
adaptive_hockey_federation/games/: admin.py  apps.py  constants.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
adaptive_hockey_federation/games/migrations/: 0001_initial.py  0002_alter_gameplayer_name.py  0002_alter_gameplayer_unique_together.py  0002_gamedataplayer.py  0002_gameplayer_alter_gameteam_options_and_more.py  0002_initial.py  0003_alter_gameplayer_unique_together_and_more.py  0003_gameplayer_last_name_alter_gameplayer_name.py  0004_alter_gameplayer_unique_together.py  0005_alter_gameplayer_last_name.py  0006_merge_20240606_1856.py  0007_alter_gameplayer_unique_together.py
adaptive_hockey_federation/main/: admin.py  apps.py  dev_utils.py  factories.py  fields.py  forms.py  mixins.py  models.py  models.py_old  permissions.py  urls.py  utils.py  validators.py  views.py
adaptive_hockey_federation/main/admin/: __init__.py  admin.py  inlines.py
adaptive_hockey_federation/main/controllers/: ajax.py  main_views.py  mixins.py  permissions.py  player_views.py  player_views_BACKUP_237084.py  staff_views.py  team_views.py  utils.py
adaptive_hockey_federation/main/data_factories/: factories.py  utils.py
adaptive_hockey_federation/main/factories/: constants.py  factory.py  utils.py
adaptive_hockey_federation/main/main_views/: team_views.py
adaptive_hockey_federation/main/migrations/: 0001_initial.py  0002_add_relations.py  0002_alter_player_diagnosis_alter_player_discipline_and_more.py  0002_alter_player_document_and_more.py  0002_alter_player_patronymic.py  0002_city_competition_diagnosis_gender_qualification_and_more.py  0002_initial.py  0002_setting_disciplines.py  0003_alter_competition_options_alter_trainer_options_and_more.py  0003_alter_health_revision_alter_player_sex.py  0003_alter_player_patronymic.py  0003_gamedataplayer.py  0003_remove_player_player_position_number_unique.py  0003_setting_disciplines.py  0004_alter_gamedataplayer_options_and_more.py  0004_alter_team_name.py  0004_delete_gamedataplayer.py  0004_team_curator.py  0005_alter_player_date_of_birth_and_more.py  0005_remove_player_player_unique.py  0005_remove_player_player_unique_player_player_unique.py  (+35 more)
adaptive_hockey_federation/parser/: docx_parser.py  exception.py  importing_db.py  parser.py  parser_1.py  parser_2.py  user_card.py  xlsx_parser.py  Реестр классов ХДН.xlsx
adaptive_hockey_federation/service/: a_hockey_requests.py  apps.py  main.py  tasks.py  video_processing.py
adaptive_hockey_federation/templates/: base.html  login.html
adaptive_hockey_federation/tests/: base.py  command_test.py  cropped_url_test.py  crud_test.py  fixture_user.py  models_schema.py  permissions_test.py  player_test.py  smoke_test.py  url_schema.py  url_test.py  users_test.py  utils.py
adaptive_hockey_federation/unloads/: admin.py  apps.py  constants.py  factories.py  mapping.py  models.py  urls.py  utils.py  views.py
adaptive_hockey_federation/users/: admin.py  apps.py  constants.py  factories.py  forms.py  managers.py  models.py  provaders.py  schemas.py  urls.py  utils.py  validators.py  views.py
adaptive_hockey_federation/video_api/: apps.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
core/: user_card.py
docs/: ER_Diagram.drawio  ER_Diagram.drawio.xml  ER_Diagram.html  codestyle.md  diagram_video_workers.bpmn  specification_of_analysts.md
docs/materials/: instructions.md
infra/dev/: Dockerfile  docker-compose.dev.yaml  docker-compose.redis_cli.yaml  redis.conf
infra/nginx/: default.conf  nginx.conf  nginx_prod.conf  nginx_stage.conf
infra/prod/: Dockerfile  adaptive_hockey_federation.service  docker-compose.prod.yaml  prod.Dockerfile
infra/stage/: adaptive_hockey_federation.service  docker-compose.stage.yaml  stage.Dockerfile
nginx/: default.conf
parser/: parser_1.py  parser_2.py  Копия Сводная таблица по командам с классами ЛТ.xlsx  Состав команды.xlsx
requirements/: develop.txt  production.txt
workflows/: build-and-push-github-packages.yml
(+293 files in other folders)
