[tool.poetry]
name = "adaptive-hockey-federation"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
gunicorn = "^21.2.0"
openpyxl = "^3.1.2"
types-openpyxl = "^3.1.0.24"
openpyxl-stubs = "^0.1.25"
click = "^8.1.7"
wrapt = "^1.16.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
pytest-django = "^4.7.0"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pre-commit = "3.5.0"
django-extensions = "^3.2.3"

[tool.poetry.group.test.dependencies]
flake8 = "^6.1.0"
flake8-isort = "^6.1.0"
mypy = "^1.5.1"
flake8-django = "^1.4"
django-stubs = "^4.2.4"



[tool.poetry.group.parser.dependencies]
python-docx = "^1.0.1"
click = "^8.1.7"
requests = "^2.31.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
namespace_packages = false
plugins = ["mypy_django_plugin.main"]
mypy_path = "./adaptive_hockey_federation"
exclude = [
    "config",
]

[[tool.mypy.overrides]]
module = [
    "adaptive_hockey_federation.parser.user_card",
    "adaptive_hockey_federation.parser.*",
    "phonenumber_field.*",
]
ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = "adaptive_hockey_federation.core.config.dev_settings"


[tool.poetry.scripts]
parser = "adaptive_hockey_federation.parser.parser:parsing_file"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adaptive_hockey_federation.core.config.test_settings"
python_files = ["test_*.py"]
