[tool.poetry]
name = "adaptive-hockey-federation"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
gunicorn = "^21.2.0"
openpyxl = "^3.1.2"
types-openpyxl = "^3.1.0.24"
openpyxl-stubs = "^0.1.25"
click = "^8.1.7"
wrapt = "^1.16.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
pytest-django = "^4.7.0"
psycopg2-binary = "2.9.9"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
pillow = "^10.2.0"
types-python-dateutil = "^2.8.19.20240106"
pytest-subtests = "^0.12.1"

djangorestframework = "^3.15.1"
drf-yasg = "^1.21.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pre-commit = "3.5.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
factory-boy = "^3.3.0"
types-Pillow = "*"
setuptools = "^70.0.0"

[tool.poetry.group.test.dependencies]
django-stubs = "^4.2.4"

[tool.poetry.group.parser.dependencies]
python-docx = "^1.0.1"
click = "^8.1.7"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
exclude = [
    "config",
    "adaptive_hockey_federation/parser/*",
    "*migrations/*",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 79
indent-width = 4
output-format = "grouped"

[tool.ruff.lint]
select = [
    # pep8-naming
    "N",
    #pyflakes
    "F",
    #pycodestyle
    "E",
    "W",
    #mccabe
    "C90",
    #isort
    "I",
    #pydocstyle
    "D",
    #flake8-bugbear
    "B",
    #flake8-commas
    "COM",
    #flake8-django
    "DJ",
    #flake8-print
    "T20",
    #flake8-pie
    "PIE",
    #flake8-quotes
    "Q",
    #eradicate
    "ERA",
    #flake8-type-checking
    "TCH",
]

ignore = ["D100", "D103", "T201", "D104", "D106", "D203", "B012", "B904", "COM819", "D212", "I001", "ERA001", "N999"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
quote-style = "double"

[tool.ruff.lint."flake8-quotes"]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings*" = ["E501", "F405"]

[tool.django-stubs]
django_settings_module = "adaptive_hockey_federation.core.config.dev_settings"

[tool.poetry.scripts]
parser = "adaptive_hockey_federation.parser.parser:parsing_file"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adaptive_hockey_federation.core.config.test_settings"
python_files = ["*_test.py"]
console_output_style = "progress"
verbosity_test_cases = 2
